--- a/index.html
+++ b/index.html
@@ -78,63 +78,64 @@
     </section>
 
     <section class="projetos" data-pf1>
+
       <div class="container_01">
         <h2 id="projetos">Projetos</h2>
+        <!-- inicio -->
         <div class="cards">
           <div class="cardContainer">
             <div class="card">
-              <img src="img/starkEng.PNG" alt="">
+              <div class="frente">
+                <img src="img/starkEng.PNG" alt="">
 
-            </div>
-            <div class="texto_00">
-              <h3>Site institucional</h3>
-              <p>Stark engenharia</p><br>
-              <p>
-                Desenvolvi esse site para uma empresa que estava começando no ramo.<br>
-                Foi utilizado HTML, CSS e Bootstrap na sua construção.
+              </div>
+              <div class="atraz">
 
-              </p>
-
+                <h3>Site institucional</h3>
+                <p class="titulo_00">Stark engenharia</p>
+                <p>Site construido com HTML, CSS e Bootstrap</p>
+                <div class="atrazBtn">
+                  <button>Acessar</button>
+                </div>
+              </div>
             </div>
           </div>
+
           <div class="cardContainer">
             <div class="card">
-              <img src="img/controle_financeiro.PNG" alt="">
-
-            </div>
-            <div class="texto_00">
-              <h3>Web app</h3>
-              <p>Controle financeiro</p><br>
-              <p>
-                Desenvolvi web app para fazer meu controle financeiro.
-                Utilizei HTM, CSS e JavaScript na construção.
-
-              </p>
+              <div class="frente">
+                <img src="img/controle_financeiro.PNG" alt="">
+              </div>
+              <div class="atraz">
+                <h3>Web app</h3>
+                <p>Controle financeiro</p>
+                <p>Web app construido com HTML, CSS e JavaScript</p>
+                <div class="atrazBtn">
+                  <button>Acessar</button>
+                </div>
+              </div>
             </div>
           </div>
+
           <div class="cardContainer">
             <div class="card">
-              <img src="img/mataMosca.PNG" alt="">
-
-            </div>
-            <div class="texto_00">
-
-              <h3>Jogo</h3>
-              <p>Mata mosca</p><br>
-              <p>
-                Desenvolvi esse jogo para aumentar minhas habilidades com JavaScript.<br>
-                Utilizei HTM, CSS e JavaScript na construção.
-
-              </p>
+              <div class="frente">
+                <img src="img/mataMosca.PNG" alt="">
+              </div>
+              <div class="atraz">
+                <h3>Jogo</h3>
+                <p>Mata mosca</p>
+                <p>Jogo construido com HTML, CSS e JavaScript</p>
+                <div class="atrazBtn">
+                  <button>Acessar</button>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
+        <!-- fim -->
+      </div>
 
-
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#ff5500" fill-opacity="1"
-          d="M0,160L48,181.3C96,203,192,245,288,229.3C384,213,480,139,576,106.7C672,75,768,85,864,106.7C960,128,1056,160,1152,192C1248,224,1344,256,1392,272L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-        </path>
-      </svg> -->
     </section>
     <section class="tecnologias" data-si1>
       <h2 id="tecnologias">Tecnologias</h2>
