finalização da área projetos

--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
 
               </div>
               <div class="atraz">
-
-                <h3>Site institucional</h3>
-                <p class="titulo_00">Stark engenharia</p>
-                <p>Site construido com HTML, CSS e Bootstrap</p>
-                <div class="atrazBtn">
-                  <button>Acessar</button>
+                <div class="borda">
+                  <h3>Site institucional</h3>
+                  <p class="titulo_00">Stark engenharia</p>
+                  <p>Site construido com HTML, CSS e Bootstrap</p>
+                  <div class="atrazBtn">
+                    <a href="http://www.starkeng.com.br/index.html"><button>Acessar</button></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -107,11 +108,13 @@
                 <img src="img/controle_financeiro.PNG" alt="">
               </div>
               <div class="atraz">
-                <h3>Web app</h3>
-                <p>Controle financeiro</p>
-                <p>Web app construido com HTML, CSS e JavaScript</p>
-                <div class="atrazBtn">
-                  <button>Acessar</button>
+                <div class="borda">
+                  <h3>Web app</h3>
+                  <p>Controle financeiro</p>
+                  <p>Web app construido com HTML, CSS e JavaScript</p>
+                  <div class="atrazBtn">
+                    <a href="controle_financeiro/index.html"><button>Acessar</button></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -123,11 +126,13 @@
                 <img src="img/mataMosca.PNG" alt="">
               </div>
               <div class="atraz">
-                <h3>Jogo</h3>
-                <p>Mata mosca</p>
-                <p>Jogo construido com HTML, CSS e JavaScript</p>
-                <div class="atrazBtn">
-                  <button>Acessar</button>
+                <div class="borda">
+                  <h3>Jogo</h3>
+                  <p>Mata mosca</p>
+                  <p>Jogo construido com HTML, CSS e JavaScript</p>
+                  <div class="atrazBtn">
+                    <a href="game_mata_mosquito/index.html"><button>Acessar</button></a>
+                  </div>
                 </div>
               </div>
             </div>
