--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </div>
               <div class="atraz">
                 <div class="borda">
-                  <h3>Jogo</h3>
+                  <h3>Web Game</h3>
                   <p>Mata mosca</p>
                   <p>Jogo construido com HTML, CSS e JavaScript</p>
                   <div class="atrazBtn">
@@ -146,49 +146,79 @@
       <h2 id="tecnologias">Tecnologias</h2>
       <div class="container_02">
         <div class="tecCards">
+          <div class="img-svg html">
+            <svg>
+              <circle cx='70' cy='70' r='70'></circle>
+              <circle cx='70' cy='70' r='70'></circle>
+            </svg>
+            <div class="numero_00">
+              <span data-html>60%</span>
+            </div>
+            <div class="titulo_02">
+              <i class="fab fa-html5"></i>
+            </div>
+          </div>
           <h3>HTML5</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make
-            a
-            type specimen book.</p>
         </div>
         <div class="tecCards">
+          <div class="img-svg css">
+            <svg>
+              <circle cx='70' cy='70' r='70'></circle>
+              <circle cx='70' cy='70' r='70'></circle>
+            </svg>
+            <div class="numero_00">
+              <span data-css>70%</span>
+            </div>
+            <div class="titulo_02">
+              <i class="fab fa-html5"></i>
+            </div>
+          </div>
           <h3>CSS3</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make
-            a
-            type specimen book.</p>
         </div>
         <div class="tecCards">
+          <div class="img-svg javascript">
+            <svg>
+              <circle cx='70' cy='70' r='70'></circle>
+              <circle cx='70' cy='70' r='70'></circle>
+            </svg>
+            <div class="numero_00">
+              <span data-js>40%</span>
+            </div>
+            <div class="titulo_02">
+              <i class="fab fa-html5"></i>
+            </div>
+          </div>
           <h3>JavaScript</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make
-            a
-            type specimen book.</p>
         </div>
         <div class="tecCards">
+          <div class="img-svg bootstrap">
+            <svg>
+              <circle cx='70' cy='70' r='70'></circle>
+              <circle cx='70' cy='70' r='70'></circle>
+            </svg>
+            <div class="numero_00">
+              <span data-bs>40%</span>
+            </div>
+            <div class="titulo_02">
+              <i class="fab fa-html5"></i>
+            </div>
+          </div>
           <h3>Bootstrap</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make
-            a
-            type specimen book.</p>
         </div>
         <div class="tecCards">
+          <div class="img-svg git">
+            <svg>
+              <circle cx='70' cy='70' r='70'></circle>
+              <circle cx='70' cy='70' r='70'></circle>
+            </svg>
+            <div class="numero_00">
+              <span data-git>50%</span>
+            </div>
+            <div class="titulo_02">
+              <i class="fab fa-html5"></i>
+            </div>
+          </div>
           <h3>Git</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make
-            a
-            type specimen book.</p>
         </div>
       </div>
     </section>
