--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
 <body>
   <header id="inicio">
+    <input type="checkbox" id="checkbox-menu" autocomplete="off">
+
+
+    <label for="checkbox-menu">
+      <div class="div-1">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </label>
+
     <nav data-menu>
       <ul>
         <li><a href="#inicio" id='mudarCor'>Início</a></li>
